work in progress

--- a/source/index.html
+++ b/source/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-  <!-- //=./template/slider-result.html -->
+  //=./template/slider-feedback.html
+  //=./template/slider-result.html
   //=./template/slider.html
-  <!-- //=./template/slider-students-work.html -->
-  <!-- //=./template/slider-feedback.html -->
+  //=./template/slider-students-work.html
 
   <script src="./js/scripts-min.js"></script>
 </body>
