--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-  //=./template/slider.html
+  //=./template/galleryft-slider/galleryft-slider-video-games.html
+  //=./template/galleryft-slider/galleryft-slider-architecture.html
 
   <script src="./js/scripts-min.js"></script>
 </body>
