added debounce function

--- a/source/index.html
+++ b/source/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 
-  //=./template/slider-feedback.html
-  //=./template/slider-result.html
-  //=./template/slider.html
-  //=./template/slider-students-work.html
+  <!-- //=./template/slider-feedback.html -->
+  <!-- //=./template/slider-result.html -->
+  <!-- //=./template/slider.html -->
+  <!-- //=./template/slider-students-work.html -->
+  //=./template/slider-curator.html
 
   <script src="./js/scripts-min.js"></script>
 </body>
